# ChangeLog for net-libs/aqhbci
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/Attic/ChangeLog,v 1.7 2005/01/30 21:47:36 weeve Exp $

  30 Jan 2005; Jason Wever <weeve@gentoo.org> aqhbci-0.9.19_beta.ebuild:
  Added ~sparc keyword wrt bug #73702.

*aqhbci-0.9.19_beta (23 Jan 2005)

  23 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-0.9.19_beta.ebuild:
  Version bump.

*aqhbci-0.9.16_beta (13 Jan 2005)

  13 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-0.9.16_beta.ebuild:
  Version bump.

  03 Jan 2005; Chris White <chriswhite@gentoo.org>
  aqhbci-0.9.14_beta.ebuild:
  Marked per bug #73702

  27 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  aqhbci-0.9.14_beta.ebuild:
  ~alpha keyword.

  26 Dec 2004; Jason Wever <weeve@gentoo.org> aqhbci-0.9.14_beta.ebuild:
  Added ~sparc keyword wrt bug #73702.

  21 Dec 2004; Hanno Boeck <hanno@gentoo.org> aqhbci-0.9.14_beta.ebuild:
  Initial commit (thanks to Florian Mueller in bug #72472).
