@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/aqhbci
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/Attic/ChangeLog,v 1.7 2005/01/30 21:47:36 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/Attic/ChangeLog,v 1.8 2005/01/31 11:42:14 hanno Exp $
+
+*aqhbci-1.0.2_beta (31 Jan 2005)
+
+  31 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-1.0.2_beta.ebuild:
+  Version bump.
 
   30 Jan 2005; Jason Wever <weeve@gentoo.org> aqhbci-0.9.19_beta.ebuild:
   Added ~sparc keyword wrt bug #73702.
